--- a/index-START.html
+++ b/index-START.html
@@ -62,12 +62,29 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition-timing-function: cubic-bezier(0.1,2.7,0.58,1);
     }
 
   </style>
 
   <script>
 
+const secondHand = document.querySelector('.second-hand');
+
+function setDate() {
+  const now = new Date();
+  const seconds = now.getSeconds();
+  const secondsDegrees = ((seconds / 60) * 360);
+  console.log(seconds);
+  secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+  // const minutes = now.getMinutes();
+};
+
+setInterval(() => {
+  setDate();
+}, 1000); 
 
   </script>
 </body>
