--- a/index-START.html
+++ b/index-START.html
@@ -72,14 +72,26 @@
   <script>
 
 const secondHand = document.querySelector('.second-hand');
+const minuteHand = document.querySelector('.min-hand');
+const hourHand = document.querySelector('.hour-hand');
 
 function setDate() {
   const now = new Date();
+
   const seconds = now.getSeconds();
-  const secondsDegrees = ((seconds / 60) * 360);
-  console.log(seconds);
+  const secondsDegrees = ((seconds / 60) * 360) + 90;
   secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-  // const minutes = now.getMinutes();
+
+  const minutes = now.getMinutes();
+  const minutesDegrees = ((minutes / 60) * 360) + 90;  console.log(minutesDegrees);
+  minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+
+  const hours = now.getHours();
+  console.log(hours);
+  const hoursDegrees = ((hours / 12) * 360) + 90;
+  console.log(hoursDegrees);
+  hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+
 };
 
 setInterval(() => {
